# async-backplane

./: Cargo.toml  README.md
.github/workflows/: bloat.yml  push_ci.yml
benches/: device.rs  line.rs  operations.rs
examples/: game_of_life.rs
src/: address.rs  bad.rs  card.rs  catch_unwind.rs  control_handle.rs  crash.rs  device.rs  device_id.rs  exit.rs  fault.rs  lib.rs  line.rs  linemap.rs  managed.rs  monitoring.rs  name.rs  observables.rs  panic.rs  pid.rs  plugboard.rs  prelude.rs  promise.rs  quantum.rs  race.rs  sending.rs  sharded_counter.rs  tangle.rs  watched.rs
src/backend/: async_std_backend.rs  mod.rs  smol_backend.rs  tokio_backend.rs
src/fewchores/: futures_endless.rs  mod.rs  race.rs
src/links/: link.rs  linking.rs  links.rs  mod.rs
src/utils/: dontpanic.rs  mod.rs  race.rs  sending.rs
src/wack/: mod.rs  scope.rs
tests/: manage.rs  monitoring.rs  part_manage.rs  smol.rs  watch.rs  works.rs
