[package]
name = "async-backplane"
version = "0.1.0"
description = "Simple, Erlang-inspired reliability backplane for Rust Futures."
keywords = ["async", "erlang", "reliability", "supervisor", "supervision"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
homepage = "https://github.com/irrustible/async-backplane"
repository = "https://github.com/irrustible/async-backplane"
documentation = "https://docs.rs/async-backplane"
license = "MPL-2.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
atomic-waker = "1.0"
concurrent-queue = "1.1.*" # https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
futures-lite = "0.1"
futures-micro = { git = "https://github.com/irrustible/futures-micro", branch = "main" }
maybe-unwind = "0.3"
pin-project-lite = "0.1"
waker-queue = "0.1"
