[package]
name = "async-backplane"
version = "0.1.1"
description = "Simple, Erlang-inspired reliability framework for Rust Futures."
keywords = ["async", "erlang", "reliability", "supervisor", "supervision"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
homepage = "https://github.com/irrustible/async-backplane"
repository = "https://github.com/irrustible/async-backplane"
documentation = "https://docs.rs/async-backplane"
license = "MPL-2.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
atomic-waker = "1.0"
concurrent-queue = ">= 1.2.1, < 1.2.2"
futures-lite = "0.1"
futures-micro = "0.2"
maybe-unwind = "0.3"
pin-project-lite = "0.1"
waker-queue = "0.1"
